content/boundary/v1.0.x/content/docs/credentials/static-cred-vault.mdx
---
layout: docs
page_title: Create a Vault credential store in Boundary
description: >-
  Create a Vault credential store in Boundary to manage credentials, then configure targets for credential brokering or credential injection.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2026-05-11T10:18:43-04:00
last_modified: 2026-08-10T22:18:11.000Z
# END AUTO GENERATED METADATA
---

# Create a Vault credential store

This page shows you how to connect an existing Vault instance to Boundary as a Vault credential store, so you can use Vault-managed credentials, including short-lived dynamic credentials, to broker or inject access into your targets. It assumes Vault is already configured with your static credentials.


## Requirements

- You must have a Vault instance available with an address or URL that is reachable from your Boundary instance. This will be used to connect Boundary to Vault.
- You must have static credentials stored in Vault’s key/value secrets engine. Examples of static credential types include username password, username password domain, and SSH private key.
- You must have a Vault token for Boundary to authenticate and access your static credentials.

## Create the Vault credential store

Complete the following steps to create a Vault credential store:

<Tabs>
<Tab heading="UI" group="ui">

1. Log in to Boundary.
1. Select **Orgs** on the navigation pane.
1. Select your desired org.
1. Select the project to which your static credential store should belong.
1. Select **Credential Stores** on the navigation pane.
1. Select **New Credential Store**.
1. Provide a name for your credential store and select type **Vault**.
1. Complete the fields related to your Vault instance:
    - **Address** - The address of your Vault instance.
    - **Worker Filter** (optional) - If your Vault instance does not have a publicly accessible address and instead is proxied through a Boundary worker, enter the worker filter. The filter should be a boolean expression. To have Boundary format the filter for you, click the **Show filter generator** toggle. Refer to [Generate a filter in the Admin UI](/boundary/docs/workers/filters#generate-a-filter-in-the-admin-ui) for the procedure, or the examples in the [Worker tags](/boundary/docs/workers/worker-tags) documentation.
    - **Token** - Token provided by Vault that provides access to the static credentials within your Vault instance.
    - **Namespace** (optional) - Vault namespace. Requires Vault Enterprise.
    - **TLS Server Name** (optional) - Name to use as the SNI host if you connect to Vault via TLS.
    - **Client Certificate** (optional) - A PEM-encoded client certificate to use for TLS authentication to the Vault server.
    - **Client Certificate key** (optional) - A PEM-encoded private key that matches the client certificate from client certificate.
    - **CA Certificate** (optional) - A PEM-encoded CA certificate to verify the Vault server's TLS certificate.

1. Click **Save**. You now have a static credential store where you can store static credentials.
1. In your newly created Vault credential store, click on the **Credential Libraries** tab.
1. Click **Manage**, and then select **New Credential Library** in the pull down menu.
1. Complete the fields related to the static credentials stored in your Vault instance:
    - **Name** (optional) -  The name is optional, but if you enter a name, it must be unique within the parent credential store.
    - **Type** - Select **Generic Secrets**.
    - **Vault Path** - Enter the path for the location of your static credentials stored in Vault. Boundary uses this field to locate the static credentials inside Vault.
    - **Credential Type** - Select the appropriate credential type that matches the static credential stored in Vault.
    - **HTTP Method** - Select **GET**.
1. Click **Save**.

</Tab>
<Tab heading="CLI" group="cli">

1. Log into Boundary.

  ```shell-session
  $ boundary authenticate
  Please enter the login name (it will be hidden):
  Please enter the password (it will be hidden):
  ```

1. Create a credential store and provide a name and project ID.

  ```shell-session
  $ boundary credential-stores create vault \
      -scope-id p_VHAKTCEKcU \
      -name "vault-cred-store-test"
  ```

1. Create a credential library using one of the following commands, based on the type of credential.

    - For username password credentials:

      ```shell-session
        $ boundary credential-libraries create vault-generic \
          -name "vault-cred-lib-test" \
          -credential-store-id csvlt_Xqa6V6QwfM \
          -credential-type username_password \
          -vault-path "path/to/vault/credentials"
      ```

    - For username password domain credentials:

      ```shell-session
        $ boundary credential-libraries create vault-generic \
          -name "vault-cred-lib-test" \
          -credential-store-id csvlt_Xqa6V6QwfM \
          -credential-type username-password-domain \
          -vault-path "path/to/vault/credentials"
      ```

    - For username private key credentials:

      ```shell-session
      $ boundary credential-libraries create vault-generic \
          -name "vault-cred-lib-test" \
          -credential-store-id csvlt_Xqa6V6QwfM \
          -credential-type ssh_private_key  \
          -vault-path "path/to/vault/credentials"
      ```

</Tab>

<Tab heading="Terraform" group="terraform">

```hcl
resource "boundary_scope" "org" {
  name                     = "organization_one"
  description              = "global scope"
  scope_id                 = "global"
  auto_create_admin_role   = true
  auto_create_default_role = true
}

resource "boundary_scope" "project" {
  name                   = "project_one"
  description            = "My first scope!"
  scope_id               = boundary_scope.org.id
  auto_create_admin_role = true
}

resource "boundary_credential_store_vault" "example" {
  name        = "example_vault_credential_store"
  description = "My first Vault credential store!"
  address     = "http://127.0.0.1:8200"
  token       = "s.0ufRo6XEGU2jOqnIr7OlFYP5"
  scope_id    = boundary_scope.project.id
}

resource "boundary_credential_library_vault" "baz" {
  name                = "baz"
  description         = "vault username password credential with mapping overrides"
  credential_store_id = boundary_credential_store_vault.foo.id
  path                = "my/secret/baz"
  http_method         = "GET"
  credential_type     = "username_password"
  # optional
  credential_mapping_overrides = {
    password_attribute = "alternative_password_label"
    username_attribute = "alternative_username_label"
  }
}

resource "boundary_credential_library_vault" "quz" {
  name                = "quz"
  description         = "vault ssh private key credential with mapping overrides"
  credential_store_id = boundary_credential_store_vault.foo.id
  path                = "my/secret/quz"
  http_method         = "GET"
  credential_type     = "ssh_private_key"
  # optional
  credential_mapping_overrides = {
    private_key_attribute            = "alternative_key_label"
    private_key_passphrase_attribute = "alternative_passphrase_label"
    username_attribute               = "alternative_username_label"
  }
}
```

</Tab>

</Tabs>

## More information

Refer to [Filtering and listing resources](/boundary/docs/filtering) for more information about Boundary's filter syntax and best practices.

## Next steps

Once you have created a credential store, you can configure targets for credential brokering or credential injection.
When you use credential brokering, Boundary centrally manages credentials and returns them to the user when they attempt to connect to a target.
Credential injection provides end users with a passwordless experience when they connect to targets.

- [Configure a target for credential brokering](/boundary/docs/credentials/configure-credential-brokering)
- [Configure a target for credential injection](/boundary/docs/credentials/configure-credential-injection)
